@@ -6,18 +6,15 @@
 --------------------Configuration: mod_playerinfo - Win32 Debug--------------------
 </h3>
 <h3>Command Lines</h3>
-Creating temporary file "C:\Users\MARKTH~1\AppData\Local\Temp\RSP4FC2.tmp" with contents
+Creating temporary file "C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP121.tmp" with contents
 [
-/nologo /MDd /W3 /Gm /GX /ZI /Od /I "..\..\sdk" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_WINDLL" /D "_AFXDLL" /D "_MBCS" /D "_USRDLL" /FR"Debug/" /Fp"Debug/mod_playerinfo.pch" /Yu"stdafx.h" /Fo"Debug/" /Fd"Debug/" /FD /GZ /c 
-"E:\Tibia\Sourse Code\tibiaauto-pub\mods\mod_playerinfo\CharInfoDialog.cpp"
-"E:\Tibia\Sourse Code\tibiaauto-pub\mods\mod_playerinfo\mod_playerinfo.cpp"
-"E:\Tibia\Sourse Code\tibiaauto-pub\sdk\MyDialog.cpp"
-"E:\Tibia\Sourse Code\tibiaauto-pub\mods\mod_playerinfo\proxy.cpp"
+/nologo /MDd /W3 /Gm /GX /ZI /Od /I "..\..\sdk" /D "WINVER 0x600" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_WINDLL" /D "_AFXDLL" /D "_MBCS" /D "_USRDLL" /FR"Debug/" /Fp"Debug/mod_playerinfo.pch" /Yu"stdafx.h" /Fo"Debug/" /Fd"Debug/" /FD /GZ /c 
+"E:\My Documents\TibiaAuto\tibiaauto-pub\mods\mod_playerinfo\CharInfoDialog.cpp"
 ]
-Creating command line "cl.exe @C:\Users\MARKTH~1\AppData\Local\Temp\RSP4FC2.tmp" 
-Creating temporary file "C:\Users\MARKTH~1\AppData\Local\Temp\RSP4FC3.tmp" with contents
+Creating command line "cl.exe @C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP121.tmp" 
+Creating temporary file "C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP122.tmp" with contents
 [
-/nologo /subsystem:windows /dll /incremental:yes /pdb:"Debug/mod_playerinfo.pdb" /debug /machine:I386 /def:".\mod_playerinfo.def" /out:"E:\Tibia\Tibia\Tibia Auto\mods/mod_playerinfo.dll" /implib:"Debug/mod_playerinfo.lib" /pdbtype:sept 
+/nologo /subsystem:windows /dll /incremental:yes /pdb:"Debug/mod_playerinfo.pdb" /debug /machine:I386 /def:".\mod_playerinfo.def" /out:"E:\Tibia Auto\mods/mod_playerinfo.dll" /implib:"Debug/mod_playerinfo.lib" /pdbtype:sept 
 ".\Debug\BtnST.obj"
 ".\Debug\CharInfoDialog.obj"
 ".\Debug\ConfigData.obj"
@@ -33,25 +30,17 @@ Creating temporary file "C:\Users\MARKTH~1\AppData\Local\Temp\RSP4FC3.tmp" with 
 ".\Debug\TibiaItem_impl.obj"
 ".\Debug\mod_playerinfo.res"
 ]
-Creating command line "link.exe @C:\Users\MARKTH~1\AppData\Local\Temp\RSP4FC3.tmp"
+Creating command line "link.exe @C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP122.tmp"
 <h3>Output Window</h3>
 Compiling...
 CharInfoDialog.cpp
-Generating Code...
-Compiling...
-proxy.cpp
-Generating Code...
-Skipping... (no relevant changes detected)
-mod_playerinfo.cpp
-MyDialog.cpp
+E:\My Documents\TibiaAuto\tibiaauto-pub\mods\mod_playerinfo\CharInfoDialog.cpp(400) : warning C4800: 'int' : forcing value to bool 'true' or 'false' (performance warning)
 Linking...
-LINK : LNK6004: E:\Tibia\Tibia\Tibia Auto\mods/mod_playerinfo.dll not found or not built by the last incremental link; performing full link
-   Creating library Debug/mod_playerinfo.lib and object Debug/mod_playerinfo.exp
 
 
 
 <h3>Results</h3>
-mod_playerinfo.dll - 0 error(s), 0 warning(s)
+mod_playerinfo.dll - 0 error(s), 1 warning(s)
 </pre>
 </body>
 </html>
