@@ -137,13 +137,13 @@ BEGIN
     LTEXT           "Level:",IDC_STATIC,15,59,49,8
     LTEXT           "0",IDC_CHARINFO_LVL,64,59,50,8
     LTEXT           "0",IDC_CHARINFO_EXP_UPIN,163,72,72,8
-    LTEXT           "Invisible:",IDC_STATIC,15,205,49,8
+    LTEXT           "Invisible:",IDC_INVIS_TIMER_TEXT,15,205,49,8
     LTEXT           "0",IDC_CHARINFO_INVIS_REMAINING,114,205,121,8
-    LTEXT           "Haste:",IDC_STATIC,15,218,49,8
+    LTEXT           "Haste:",IDC_HASTE_TIMER_TEXT,15,218,49,8
     LTEXT           "0",IDC_CHARINFO_HASTE_REMAINING,114,218,121,8
-    LTEXT           "Stong Haste:",IDC_STATIC,15,232,49,8
+    LTEXT           "Stong Haste:",IDC_STRONG_HASTE_TIMER_TEXT,15,232,49,8
     LTEXT           "0",IDC_CHARINFO_STRONGHASTE_REMAINING,114,232,121,8
-    LTEXT           "Magic Shield:",IDC_STATIC,15,245,49,8
+    LTEXT           "Magic Shield:",IDC_MAGIC_SHIELD_TIMER_TEXT,15,245,49,8
     LTEXT           "0",IDC_CHARINFO_MAGICSHIELD_REMAINING,114,245,121,8
     LTEXT           "Soul Points:",IDC_STATIC,114,33,49,8
     LTEXT           "0",IDC_CHARINFO_SP,163,33,72,8
@@ -158,6 +158,8 @@ BEGIN
     LTEXT           "0",IDC_CHARINFO_MLVL_SPEED,114,85,49,8
     LTEXT           "0",IDC_CHARINFO_MLVL_UPIN,163,85,72,8
     LTEXT           "0",IDC_CHARINFO_LVL_SPEED,114,59,49,8
+    CONTROL         "",IDC_ENABLETIMERS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,7,193,8,10
 END
 
 
